--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,36 +15,19 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
 
+        android:id="@+id/keys"
+
         android:layout_height="match_parent"
         android:layout_width="match_parent"
         android:orientation="vertical"
+
         android:scrollbars="vertical"
+        android:paddingBottom="0dp"
+        android:paddingTop="0dp"
+        android:dividerPadding="0dp"
         android:isScrollContainer="true"
-        android:id="@+id/keys"
 
         >
-        <!--
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/A_LABEL"
-                android:onClick="playSound"
-                />
-
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/B_LABEL"
-                android:onClick="playSound"
-                />
-
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/C_LABEL"
-                android:onClick="playSound"
-                />
-        -->
 
     </LinearLayout>
 
