--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,34 +1,94 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:fillViewport="true"
-    android:layout_height="match_parent"
-    android:layout_width="match_parent"
-    android:scrollbars="vertical"
-    android:scrollbarAlwaysDrawVerticalTrack="true"
+<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main_layout"
+    android:layout_height="wrap_content"
+    android:layout_width="wrap_content"
+    android:orientation="horizontal"
+    android:columnCount="3"
     >
-    <!--
-      lets you scroll, but so far has not convinced it to draw scrollbars.
-    -->
-
-    <LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-
-        android:id="@+id/keys"
-
-        android:layout_height="match_parent"
-        android:layout_width="match_parent"
-        android:orientation="vertical"
-
+    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:fillViewport="true"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
         android:scrollbars="vertical"
-        android:paddingBottom="0dp"
-        android:paddingTop="0dp"
-        android:dividerPadding="0dp"
-        android:isScrollContainer="true"
+        android:scrollbarAlwaysDrawVerticalTrack="true"
+        android:scrollbarStyle="insideOverlay"
+        android:layout_columnWeight="1">
 
+        <LinearLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+
+            android:id="@+id/keys"
+
+            android:layout_height="wrap_content"
+            android:layout_width="150dp"
+            android:orientation="vertical"
+            android:divider="@color/colorPrimaryDark"
+
+            android:scrollbars="vertical"
+            android:isScrollContainer="true"
+            >
+
+        </LinearLayout>
+
+    </ScrollView>
+    <Space
+        android:layout_width="20dp"
+        />
+    <GridLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:columnCount="1"
         >
+        <TextView
+            android:text="@string/settings"
+            android:layout_gravity="center_horizontal"
+            android:textColor="@color/colorPrimaryDark"
+            />
 
-    </LinearLayout>
+        <CheckBox
+            android:layout_gravity="left"
+            android:text="hold"
+            android:id="@+id/hold"
+            android:onClick="setHold"
+            />
 
-</ScrollView>
+        <CheckBox
+            android:text="sharps"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/sharps"
+            tools:layout_gravity="left"
+            android:onClick="setSharps"
+            />
+        <Space
+            android:layout_height="10dp"
+            />
+        <TextView
+            android:text="@string/octave"
+            android:layout_gravity="center_horizontal"
+            android:textColor="@color/colorPrimaryDark"
+            />
+
+        <Spinner
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/octave"
+            tools:layout_gravity="center_horizontal"
+            android:entries="@array/octaves"
+            android:dropDownSelector="@color/colorPrimaryDark"
+
+            />
+
+        <Spinner
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/wave"
+            android:layout_gravity="center" />
+
+    </GridLayout>
+
+</GridLayout>
