--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,94 +1,110 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main_layout"
-    android:layout_height="wrap_content"
-    android:layout_width="wrap_content"
-    android:orientation="horizontal"
-    android:columnCount="3"
-    >
-    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-        android:fillViewport="true"
+
+    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/main_layout"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
-        android:scrollbars="vertical"
-        android:scrollbarAlwaysDrawVerticalTrack="true"
-        android:scrollbarStyle="insideOverlay"
-        android:layout_columnWeight="1">
-
-        <LinearLayout
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:tools="http://schemas.android.com/tools"
-
-            android:id="@+id/keys"
-
+        android:orientation="horizontal"
+        android:columnCount="3"
+        >
+        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+            android:fillViewport="true"
             android:layout_height="wrap_content"
-            android:layout_width="150dp"
-            android:orientation="vertical"
-            android:divider="@color/colorPrimaryDark"
-
+            android:layout_width="wrap_content"
             android:scrollbars="vertical"
-            android:isScrollContainer="true"
+            android:scrollbarAlwaysDrawVerticalTrack="true"
+            android:scrollbarStyle="insideOverlay"
+            android:layout_columnWeight="1"
             >
 
-        </LinearLayout>
 
-    </ScrollView>
-    <Space
-        android:layout_width="20dp"
-        />
-    <GridLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:columnCount="1"
-        >
-        <TextView
-            android:text="@string/settings"
-            android:layout_gravity="center_horizontal"
-            android:textColor="@color/colorPrimaryDark"
-            />
+            <LinearLayout
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:tools="http://schemas.android.com/tools"
 
-        <CheckBox
-            android:layout_gravity="left"
-            android:text="hold"
-            android:id="@+id/hold"
-            android:onClick="setHold"
-            />
+                android:id="@+id/keys"
 
-        <CheckBox
-            android:text="sharps"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/sharps"
-            tools:layout_gravity="left"
-            android:onClick="setSharps"
-            />
+                android:layout_height="wrap_content"
+                android:layout_width="200dp"
+                android:orientation="vertical"
+                android:divider="@color/colorPrimaryDark"
+
+                android:scrollbars="vertical"
+                android:isScrollContainer="true"
+                >
+
+            </LinearLayout>
+
+        </ScrollView>
         <Space
-            android:layout_height="10dp"
+            android:layout_width="20dp"
             />
-        <TextView
-            android:text="@string/octave"
-            android:layout_gravity="center_horizontal"
-            android:textColor="@color/colorPrimaryDark"
-            />
-
-        <Spinner
+        <GridLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/octave"
-            tools:layout_gravity="center_horizontal"
-            android:entries="@array/octaves"
-            android:dropDownSelector="@color/colorPrimaryDark"
+            android:layout_height="match_parent"
+            android:columnCount="1"
+            >
+            <Space
+                android:layout_height="60dp"
+                />
+            <TextView
+                android:text="@string/settings"
+                android:layout_gravity="center_horizontal"
+                android:textColor="@color/colorPrimaryDark"
+                android:layout_width="wrap_content" />
 
-            />
+            <CheckBox
+                android:layout_gravity="left"
+                android:text="hold"
+                android:id="@+id/hold"
+                android:onClick="setHold"
+                />
 
-        <Spinner
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/wave"
-            android:layout_gravity="center" />
+            <CheckBox
+                android:text="sharps"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/sharps"
+                tools:layout_gravity="left"
+                android:onClick="setSharps"
+                />
+            <Space
+                android:layout_height="10dp"
+                />
+            <TextView
+                android:text="@string/octave"
+                android:layout_gravity="center_horizontal"
+                android:textColor="@color/colorPrimaryDark"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <Spinner
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/octave"
+                tools:layout_gravity="center_horizontal"
+                android:entries="@array/octaves"
+                android:dropDownSelector="@color/colorPrimaryDark"
+
+                />
+
+            <TextView
+                android:text="@string/wave"
+                android:layout_gravity="center_horizontal"
+                android:textColor="@color/colorPrimaryDark"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content" />
+
+            <Spinner
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/wave"
+                tools:layout_gravity="center_horizontal"
+                android:layout_gravity="center"
+                />
+
+        </GridLayout>
 
     </GridLayout>
-
-</GridLayout>
