--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -118,7 +118,26 @@
             tools:layout_gravity="center_horizontal"
             android:layout_gravity="center"
             />
+        <Space
+            android:layout_height="15dp"
+            android:background="@color/black"
+            />
 
+        <TextView
+            android:text="Envelope"
+            android:layout_gravity="center_horizontal"
+            android:textColor="@color/colorPrimaryDark"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content" />
+
+        <Spinner
+            android:entries="@array/envelopes"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/env"
+            tools:layout_gravity="center_horizontal"
+            android:layout_gravity="center"
+            />
     </GridLayout>
 
 </GridLayout>
